Version 1.0.1
------------------------------------------------------------------
30 August 2007
+ Added ability to reset slot order should it come unraveled.
+ Fixed reroute link that was hard coded to go to sheet id 1.
+ Updated: templates/slot_setup.tpl

Version 1.0.0 -- 25 July 2007
------------------------------------------------------------------
8 August 2007
+ Fixed slot deletion

31 July 2007
+ Fixed typo when deleting sheet.
+ Email check on current sheet only.

30 July 2007
+ Applicant signup was missing organization
+ Print application now observes pager settings.

25 July 2007
+ Sheet expiration works

24 July 2007
+ Added organization
+ Added csv and listing report

23 July 2007
+ Added missing key purge to sheet delete.

10 July 2007
+ added edit_sheet permission to config file
+ Edit slot link works
+ Can add and edit peeps in slots
+ Wrote parsing for phone number display. Uses new config option.
+ Sheets now save a key.
+ Rewrote loadSheet, loadSlot, loadPeep so they all depend on each
other and autoload

6 July 2007
+ Closing on on functionality. Peeps and slots class created. Database
should be finalized.
+ Uninstall script written.