@@ -1,3 +1,6 @@
+21 September 2007
++ Fixed: All slots full message was not displaying.
+
 Version 1.0.1
 ------------------------------------------------------------------
 30 August 2007
